force-app/main/default/objects/CLQ_Standard_Findings__c/CLQ_Standard_Findings__c.object-meta.xml
<CustomObject>
    <label>Standard Findings</label>
    <nameField>
        <label>Standard Finding</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Findings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>