force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Action_Required__c</fullName>
    <label>Action Required</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>