force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Additional_Description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Additional_Description__c</fullName>
    <label>Rule Language on Report</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>