force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_CAP__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAP</label>
    <type>Checkbox</type>
</CustomField>