force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Description_Cont__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Description_Cont__c</fullName>
    <label>Description Cont.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>