force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Documents_Required__c</fullName>
    <description>List of documents required for the standard finding</description>
    <label>Documents Required</label>
    <type>TextArea</type>
</CustomField>