force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Documents_Required_single__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Documents_Required_single__c</fullName>
    <label>Documents Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Vehicle Inspection</fullName>
            </value>
            <value>
                <fullName>Attendance Records</fullName>
            </value>
            <value>
                <fullName>Background Checks</fullName>
            </value>
            <value>
                <fullName>Building Approval</fullName>
            </value>
            <value>
                <fullName>Child MedicalEnrollment Form</fullName>
            </value>
            <value>
                <fullName>Crib Verification</fullName>
            </value>
            <value>
                <fullName>Daily Schedule</fullName>
            </value>
            <value>
                <fullName>Driver Information</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Emergecy Postings</fullName>
            </value>
            <value>
                <fullName>Equipment Verification</fullName>
            </value>
            <value>
                <fullName>Evening Care Verification</fullName>
            </value>
            <value>
                <fullName>Fire Approval</fullName>
            </value>
            <value>
                <fullName>Food Service Exemption</fullName>
            </value>
            <value>
                <fullName>Food Service License</fullName>
            </value>
            <value>
                <fullName>Handbook</fullName>
            </value>
            <value>
                <fullName>Health/Safety Training</fullName>
            </value>
            <value>
                <fullName>Health and Safety Verification</fullName>
            </value>
            <value>
                <fullName>Health Care Plan</fullName>
            </value>
            <value>
                <fullName>Incident Report</fullName>
            </value>
            <value>
                <fullName>Indoor Diagram</fullName>
            </value>
            <value>
                <fullName>Indoor Space Verification</fullName>
            </value>
            <value>
                <fullName>Infant Verification</fullName>
            </value>
            <value>
                <fullName>Liability Insurance</fullName>
            </value>
            <value>
                <fullName>Meal Verification</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Menu</fullName>
            </value>
            <value>
                <fullName>Non-Conviction Statement</fullName>
            </value>
            <value>
                <fullName>Observation Verification</fullName>
            </value>
            <value>
                <fullName>Outdoor Diagram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>