force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Finding_Applicable_To__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Finding_Applicable_To__c</fullName>
    <label>Finding Applicable To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUTQ</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>