force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Finding_Code__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Finding_Code__c</fullName>
    <description>Unique Code per associated with the finding</description>
    <label>Finding Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>