force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Finding_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Finding_Effective_Date__c</fullName>
    <label>Finding Effective Date</label>
    <type>Date</type>
</CustomField>