force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Finding_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Finding_Type__c</fullName>
    <label>Type of Finding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Compliance</fullName>
            </value>
            <value>
                <fullName>Documenting Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>