force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_General_Info__c.field-meta.xml
<CustomField>
    <fullName>CLQ_General_Info__c</fullName>
    <label>General Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>