force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Infant_Toddler_Examples__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Infant_Toddler_Examples__c</fullName>
    <label>Infant/Toddler Examples</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>