force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Interview_Question__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Interview_Question__c</fullName>
    <label>Interview Question</label>
    <length>200</length>
    <type>Text</type>
</CustomField>