force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Is_Related_to_OCOT__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Is_Related_to_OCOT__c</fullName>
    <inlineHelpText>This field is an indicator that the records created are for only specific to OCOT</inlineHelpText>
    <label>Is Related to OCOT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>