force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Licensing_Domain__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Licensing_Domain__c</fullName>
    <label>Licensing Domain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>