force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Non_Compliance_points__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Non_Compliance_points__c</fullName>
    <formula>IF(ISPICKVAL(CLQ_Risk_Level__c,&quot;Serious&quot;),6,
IF(ISPICKVAL(CLQ_Risk_Level__c,&quot;Moderate&quot;),3,
IF(ISPICKVAL(CLQ_Risk_Level__c,&quot;Low&quot;),1,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Compliance points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>