force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Observers_Comment__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Observers_Comment__c</fullName>
    <label>Observer&apos;s Comment</label>
    <type>TextArea</type>
</CustomField>