force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Points__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Points__c</fullName>
    <label>Points</label>
    <length>10</length>
    <type>Text</type>
</CustomField>