force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Providers_Response__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Providers_Response__c</fullName>
    <label>Provider&apos;s Response</label>
    <type>TextArea</type>
</CustomField>