force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Rating__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rating__c</fullName>
    <label>Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>