force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Risk_Level__c</fullName>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Serious</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>