force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_Rules__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rules</label>
    <referenceTo>CLQ_Rule__c</referenceTo>
    <relationshipLabel>Standard Findings</relationshipLabel>
    <relationshipName>Standard_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>