force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_School_Age_Examples__c.field-meta.xml
<CustomField>
    <fullName>CLQ_School_Age_Examples__c</fullName>
    <label>School Age Examples</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>