force-app/main/default/objects/CLQ_Standard_Findings__c/fields/CLQ_TA__c.field-meta.xml
<CustomField>
    <fullName>CLQ_TA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TA</label>
    <type>Checkbox</type>
</CustomField>