force-app/main/default/objects/CLQ_Standard_Findings__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Learning &amp; Development</fullName>
            </value>
            <value>
                <fullName>Administrative &amp; Leadership Practices</fullName>
            </value>
            <value>
                <fullName>Staff Qualifications &amp; Professional Development</fullName>
            </value>
            <value>
                <fullName>Family &amp; Community Partnerships</fullName>
            </value>
            <value>
                <fullName>Ratio</fullName>
            </value>
            <value>
                <fullName>Accreditation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>