force-app/main/default/objects/CLQ_Standard_Findings__c/fields/Fcc_Or_CC__c.field-meta.xml
<CustomField>
    <fullName>Fcc_Or_CC__c</fullName>
    <label>Fcc Or CCC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCC</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>