force-app/main/default/objects/CLQ_Standard_Findings__c/fields/Is_Related_to_OCOT_General_Information__c.field-meta.xml
<CustomField>
    <fullName>Is_Related_to_OCOT_General_Information__c</fullName>
    <label>Is Related to OCOT General Information</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CLQ_Is_Related_to_OCOT__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>