force-app/main/default/objects/CLQ_Standard_Findings__c/fields/Met_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>Met_Not_Met__c</fullName>
    <label>Met/Not Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>Deferral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>