force-app/main/default/objects/CLQ_Standard_Findings__c/validationRules/Either_CAP_or_TA_should_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_CAP_or_TA_should_be_selected</fullName>
    <active>false</active>
    <description>only one of CAP and TA can be checked</description>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; AND( CLQ_CAP__c = true,  CLQ_TA__c = true)</errorConditionFormula>
    <errorMessage>Cannot check both CAP and TA</errorMessage>
</ValidationRule>