force-app/main/default/objects/CLQ_Standard_Findings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Finding_Code__c</columns>
    <columns>CLQ_Finding_Type__c</columns>
    <columns>CLQ_Finding_Effective_Date__c</columns>
    <columns>CLQ_Integration_Document_Type__c</columns>
    <columns>CLQ_Risk_Level__c</columns>
    <columns>CLQ_CAP__c</columns>
    <columns>CLQ_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>