force-app/main/default/objects/CLQ_Standard_Findings__c/listViews/All_Informatica.listView-meta.xml
<ListView>
    <fullName>All_Informatica</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Domain_Rule__c</columns>
    <columns>CLQ_Finding_Code__c</columns>
    <columns>CLQ_Risk_Level__c</columns>
    <columns>CLQ_Non_Compliance_points__c</columns>
    <columns>CLQ_Finding_Type__c</columns>
    <columns>CLQ_CAP__c</columns>
    <columns>CLQ_TA__c</columns>
    <columns>Domain__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Informatica User</value>
    </filters>
    <label>All_Informatica</label>
</ListView>