force-app/main/default/objects/CLQ_Standard_Findings__c/listViews/CLQ_All_Active_SUTQ_Standard_Findings.listView-meta.xml
<ListView>
    <fullName>CLQ_All_Active_SUTQ_Standard_Findings</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>CLQ_Finding_Code__c</columns>
    <columns>CLQ_Finding_Type__c</columns>
    <columns>CLQ_Finding_Effective_Date__c</columns>
    <columns>CLQ_Integration_Document_Type__c</columns>
    <columns>CLQ_Risk_Level__c</columns>
    <columns>CLQ_CAP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Domain__c</field>
        <operation>contains</operation>
        <value>Learning &amp; Development,Administrative &amp; Leadership Practices,Staff Qualificati</value>
    </filters>
    <filters>
        <field>CLQ_Finding_Effective_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CLQ_Finding_Expiration_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CLQ_Finding_Expiration_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>All Active SUTQ Standard Findings</label>
</ListView>