force-app/main/default/objects/CLQ_Standard_Findings__c/listViews/CLQ_FCCA_Historical_Licensing_Std_Findings.listView-meta.xml
<ListView>
    <fullName>CLQ_FCCA_Historical_Licensing_Std_Findings</fullName>
    <booleanFilter>1 AND 4 AND (2 AND 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>CLQ_Finding_Code__c</columns>
    <columns>CLQ_Finding_Type__c</columns>
    <columns>CLQ_Finding_Effective_Date__c</columns>
    <columns>CLQ_Finding_Expiration_Date__c</columns>
    <columns>CLQ_Integration_Document_Type__c</columns>
    <columns>CLQ_Risk_Level__c</columns>
    <columns>CLQ_CAP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CLQ_Program_Type__c</field>
        <operation>includes</operation>
        <value>FCC - Type A Home</value>
    </filters>
    <filters>
        <field>CLQ_Finding_Expiration_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CLQ_Finding_Expiration_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CLQ_Finding_Applicable_To__c</field>
        <operation>equals</operation>
        <value>Licensing</value>
    </filters>
    <label>FCC A-Historical Licensing Std Findings</label>
</ListView>